poritt/examples/errors/error-lam-not-pi.ptt
define foo : U = \ x -> x
